# sucrityflash

./: .gitignore  ARCHITECTURE_CLEANUP_SUMMARY.md  PENTEST_COMPLETE_GUIDE.md  README.md  README_RUN.md  REPO_CLEANUP_COMPLETE.md  V2_BFF_CONVERSION_COMPLETE.md  V2_UI_COMPLETION_SUMMARY.md  docker-compose.yml  production_pentest_test.sh  run_pentest.sh  test_pentest_workflow.sh
pentest-ai-platform/: .gitignore  (+28 more)
securityflash/: .env.example  .gitignore  AGENT_RUNTIME_COMPLETE.md  BUILD_SUMMARY.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_STATUS.md  Makefile  QUICK_START.md  README.md  README_PHASE23.md  alembic.ini  approve.py  check_status.py  docker-compose.yml  init_db.py  monitor.py  pyproject.toml  pytest.ini  run_migrations.py  test_run_37983270_details.json  test_run_37983270_server_logs.txt  test_run_37983270_stats.json  test_run_37983270_timeline.json
securityflash/apps/agents/: base.py  daemon.py  model_router.py  orchestrator.py  runner.py  swarm_manager.py  validation_pack_writer.py
securityflash/apps/analysis/: __init__.py  findings_postprocessor.py  postprocessors.py
securityflash/apps/api/: main.py
securityflash/apps/observability/: __init__.py  metrics.py  prometheus.py
securityflash/apps/workers/: evidence_writer.py  runner.py  token_verify.py  tool_allowlist.py  tool_registry.py  worker_main.py
securityflash/infra/minio/: minio_policy.json
securityflash/logs/: run_0b013958_summary.md
securityflash/migrations/: 003_add_validation_packs.sql
securityflash/scripts/: reviewer_queue.py  smoke_phase3.sh  smoke_real_run.sh  v2_smoke_flow.sh
(+200 files in other folders)
